--- a/styles/pages/tracking.css
+++ b/styles/pages/tracking.css
@@ -72,10 +72,15 @@
   border-radius: 50px;
   overflow: hidden;
 }
-
-.progress-bar {
+.progress-bar-half,
+.progress-bar-full {
   height: 100%;
   background-color: green;
   border-radius: 50px;
+}
+.progress-bar-half {
   width: 50%;
+}
+.progress-bar-full {
+  width: 100%;
 }
