--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -13,6 +13,7 @@
   left: 0;
   right: 0;
   height: 60px;
+  z-index: 100;
 }
 
 .amazon-header-left-section {
@@ -143,7 +144,7 @@
   position: absolute;
   top: 4px;
   left: 22px;
-  
+
   width: 26px;
   text-align: center;
 }
