--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -5,6 +5,7 @@
 .products-grid {
   display: grid;
   position: relative;
+  width: 100%;
   grid-template-columns: repeat(8, 1fr);
 }
 
@@ -32,33 +33,16 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 425px) {
   .products-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-
-@media (min-width: 425px) {
-  .products-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-/* @media (max-width: 450px) {
-  .products-grid {
-    grid-template-columns: 1fr;
-  }
-} */
 
 .product-container {
-  padding-top: 40px;
-  padding-bottom: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
-
+  padding: 40px 25px 25px;
   border-right: 1px solid rgb(231, 231, 231);
   border-bottom: 1px solid rgb(231, 231, 231);
-
   display: flex;
   flex-direction: column;
 }
@@ -67,15 +51,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   height: 180px;
   margin-bottom: 20px;
 }
 
 .product-image {
-  /* Images will overflow their container by default. To
-    prevent this, we set max-width and max-height to 100%
-    so they stay inside their container. */
   max-width: 100%;
   max-height: 100%;
 }
@@ -118,14 +98,9 @@
 .added-to-cart {
   color: rgb(6, 125, 98);
   font-size: 16px;
-
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-
-  /* At first, the "Added to cart" message will
-     be invisible. Use JavaScript to change the
-     opacity and make it visible. */
   opacity: 0;
 }
 
@@ -139,6 +114,7 @@
   padding: 8px;
   border-radius: 50px;
 }
+
 .loader-container {
   position: absolute;
   inset: 0;
@@ -146,21 +122,20 @@
   justify-content: center;
   align-items: center;
   min-height: 500px;
+  background: white;
 }
+
 .spinner {
   width: 48px;
   height: 48px;
   border: 5px solid #e0e0e0;
-  border-top: 5px solid #007185; /* Amazon blue */
+  border-top: 5px solid #007185;
   border-radius: 50%;
-  animation: spin 0.75s ease-in-out infinite;
+  animation: spin 0.75s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     transform: rotate(360deg);
   }
 }
